Modification du code html des pages restau. Remplacement des balises div par des balises hr pour les bordures. Ajout de div sur les cartes menus pour faire l'animation de transition

--- a/pages/a_la_francaise.html
+++ b/pages/a_la_francaise.html
@@ -41,112 +41,147 @@
         <!-- Début du menu pour les Entrées -->
         <div class="menu-card">
           <h2 class="card_maintitle">Entrées</h2>
-          <div class="maintitle_border"></div>
+          <hr class="maintitle_border" />
           <!-- les divs dans les divs inutiles -->
 
           <a class="card" href="#">
-            <p class="card_title">Tartare de poulpe acidulé</p>
-            <p class="card_subtitle">Aux zests d'orange</p>
-            <p class="card_price">25€</p>
-            <p class="card_checkicon">
-              <i class="fa-regular fa-circle-check"></i>
-            </p>
+            <div class="splitleft">
+              <p class="card_title">Tartare de poulpe acidulé</p>
+              <p class="card_subtitle">Aux zests d'orange</p>
+            </div>
+            <div class="splitright">
+              <p class="card_price">25€</p>
+              <p class="card_checkicon">
+                <i class="fa-regular fa-circle-check"></i>
+              </p>
+            </div>
           </a>
 
           <!-- Uniformisation des classes selon la méthode BEM -->
           <!-- Suppression de divs inutiles -->
 
           <a class="card" href="#">
-            <p class="card_title">Velouté de légumes d'antan</p>
-            <p class="card_subtitle">Carotte, panais, topinambour</p>
-            <p class="card_price">35€</p>
-            <p class="card_checkicon">
-              <i class="fa-regular fa-circle-check"></i>
-            </p>
+            <div class="splitleft">
+              <p class="card_title">Velouté de légumes d'antan</p>
+              <p class="card_subtitle">Carotte, panais, topinambour</p>
+            </div>
+            <div class="splitright">
+              <p class="card_price">35€</p>
+              <p class="card_checkicon">
+                <i class="fa-regular fa-circle-check"></i>
+              </p>
+            </div>
           </a>
 
           <!-- attention -->
 
           <a class="card" href="#">
-            <p class="card_title">Soupe à l'oignon</p>
-            <p class="card_subtitle">Revisitée</p>
-            <p class="card_price">20€</p>
-            <p class="card_checkicon">
-              <i class="fa-regular fa-circle-check"></i>
-            </p>
+            <div class="splitleft">
+              <p class="card_title">Soupe à l'oignon</p>
+              <p class="card_subtitle">Revisitée</p>
+            </div>
+            <div class="splitright">
+              <p class="card_price">20€</p>
+              <p class="card_checkicon">
+                <i class="fa-regular fa-circle-check"></i>
+              </p>
+            </div>
           </a>
         </div>
         <!-- Fin du menu pour les Entrées -->
         <!-- Début du menu pour les plats -->
         <div class="menu-card">
           <h2 class="card_maintitle">Plats</h2>
-          <div class="maintitle_border"></div>
+          <hr class="maintitle_border" />
           <a class="card" href="#">
-            <p class="card_title">Coquilles Saint-Jacques</p>
-            <p class="card_subtitle">Accompagnées d'une purée de panais</p>
-            <p class="card_price">40€</p>
-            <p class="card_checkicon">
-              <i class="fa-regular fa-circle-check"></i>
-            </p>
+            <div class="splitleft">
+              <p class="card_title">Coquilles Saint-Jacques</p>
+              <p class="card_subtitle">Accompagnées d'une purée de panais</p>
+            </div>
+            <div class="splitright">
+              <p class="card_price">40€</p>
+              <p class="card_checkicon">
+                <i class="fa-regular fa-circle-check"></i>
+              </p>
+            </div>
           </a>
 
           <a class="card" href="#">
-            <p class="card_title">Magret de canard</p>
-            <p class="card_subtitle">Et parmentier de pommes de terres</p>
-            <p class="card_price">35€</p>
-            <p class="card_checkicon">
-              <i class="fa-regular fa-circle-check"></i>
-            </p>
+            <div class="splitleft">
+              <p class="card_title">Magret de canard</p>
+              <p class="card_subtitle">Et parmentier de pommes de terres</p>
+            </div>
+            <div class="splitright">
+              <p class="card_price">35€</p>
+              <p class="card_checkicon">
+                <i class="fa-regular fa-circle-check"></i>
+              </p>
+            </div>
           </a>
 
           <!-- Penser à uniformiser les classes des divs pour le code SCSS -->
 
           <a class="card" href="#">
-            <p class="card_title">Pigeonneau d'Ille-et-Vilaine</p>
-            <p class="card_subtitle">Sur son lit de gnocchis aux légumes</p>
-            <p class="card_price">44€</p>
-            <p class="card_checkicon">
-              <i class="fa-regular fa-circle-check"></i>
-            </p>
+            <div class="splitleft">
+              <p class="card_title">Pigeonneau d'Ille-et-Vilaine</p>
+              <p class="card_subtitle">Sur son lit de gnocchis aux légumes</p>
+            </div>
+            <div class="splitright">
+              <p class="card_price">44€</p>
+              <p class="card_checkicon">
+                <i class="fa-regular fa-circle-check"></i>
+              </p>
+            </div>
           </a>
         </div>
         <!-- Fin du menu pour les plats -->
         <!-- Début du menu pour les desserts -->
         <div class="menu-card">
           <h2 class="card_maintitle">Desserts</h2>
-          <div class="maintitle_border"></div>
+          <hr class="maintitle_border" />
           <a class="card" href="#">
-            <p class="card_title">Pétales de violettes glacés</p>
-            <p class="card_subtitle">Et purée de noisettes</p>
-            <p class="card_price">18€</p>
-            <p class="card_checkicon">
-              <i class="fa-regular fa-circle-check"></i>
-            </p>
+            <div class="splitleft">
+              <p class="card_title">Pétales de violettes glacés</p>
+              <p class="card_subtitle">Et purée de noisettes</p>
+            </div>
+            <div class="splitright">
+              <p class="card_price">18€</p>
+              <p class="card_checkicon">
+                <i class="fa-regular fa-circle-check"></i>
+              </p>
+            </div>
           </a>
 
           <a class="card" href="#">
-            <p class="card_title">Fondant au chocolat</p>
-            <p class="card_subtitle">Revisité</p>
-            <p class="card_price">22€</p>
-            <p class="card_checkicon">
-              <i class="fa-regular fa-circle-check"></i>
-            </p>
+            <div class="splitleft">
+              <p class="card_title">Fondant au chocolat</p>
+              <p class="card_subtitle">Revisité</p>
+            </div>
+            <div class="splitright">
+              <p class="card_price">22€</p>
+              <p class="card_checkicon">
+                <i class="fa-regular fa-circle-check"></i>
+              </p>
+            </div>
           </a>
 
           <a class="card" href="#">
-            <p class="card_title">Millefeuille croustillant</p>
-            <p class="card_subtitle">Myrtilles et pâte d'amande</p>
-            <p class="card_price">23€</p>
-            <p class="card_checkicon">
-              <i class="fa-regular fa-circle-check"></i>
-            </p>
+            <div class="splitleft">
+              <p class="card_title">Millefeuille croustillant</p>
+              <p class="card_subtitle">Myrtilles et pâte d'amande</p>
+            </div>
+            <div class="splitright">
+              <p class="card_price">23€</p>
+              <p class="card_checkicon">
+                <i class="fa-regular fa-circle-check"></i>
+              </p>
+            </div>
           </a>
         </div>
         <div class="order">
           <button class="order_button">Commander</button>
         </div>
       </section>
-
     </main>
     <footer class="index-foot">
       <img
