--- a/pages/la_palette_du_gout.html
+++ b/pages/la_palette_du_gout.html
@@ -41,90 +41,149 @@
         <!-- Début du menu pour les Entrées -->
         <div class="menu-card">
           <h2 class="card_maintitle">Entrées</h2>
+          <hr class="maintitle_border" />
           <!-- les divs dans les divs inutiles -->
 
           <a class="card" href="#">
-            <p class="card_title">Fricassée d'escargot</p>
-            <p class="card_subtitle">Au pimet d'espelette</p>
-            <p class="card_price">25€</p>
-            <p class="card_checkicon">
-              <i class="fa-regular fa-circle-check"></i>
-            </p>
+            <div class="splitleft">
+              <p class="card_title">Fricassée d'escargot</p>
+              <p class="card_subtitle">Au pimet d'espelette</p>
+            </div>
+            <div class="splitright">
+              <p class="card_price">25€</p>
+              <p class="card_checkicon">
+                <i class="fa-regular fa-circle-check"></i>
+              </p>
+            </div>
           </a>
           <!-- Uniformisation des classes selon la méthode BEM -->
           <!-- Suppression de divs inutiles -->
           <a class="card" href="#">
-            <p class="card_title">Foie gras de canard mi-cuit</p>
-            <p class="card_subtitle">Et ses copeaux de truffe noire</p>
-            <p class="card_price">35€</p>
-            <p class="card_checkicon">
-              <i class="fa-regular fa-circle-check"></i>
-            </p>
+            <div class="splitleft">
+              <p class="card_title">Foie gras de canard mi-cuit</p>
+              <p class="card_subtitle">Et ses copeaux de truffe noire</p>
+            </div>
+            <div class="splitright">
+              <p class="card_price">35€</p>
+              <p class="card_checkicon">
+                <i class="fa-regular fa-circle-check"></i>
+              </p>
+            </div>
           </a>
 
           <!-- attention -->
 
           <a class="card" href="#">
-            <p class="card_title">Oeuf au plat</p>
-            <p class="card_subtitle">
-              Assaisonné à la truffe sur lit de caviar
-            </p>
-            <p class="card_price">20€</p>
-            <p class="card_checkicon">
-              <i class="fa-regular fa-circle-check"></i>
-            </p>
+            <div class="splitleft">
+              <p class="card_title">Oeuf au plat</p>
+              <p class="card_subtitle">
+                Assaisonné à la truffe sur lit de caviar
+              </p>
+            </div>
+            <div class="splitright">
+              <p class="card_price">20€</p>
+              <p class="card_checkicon">
+                <i class="fa-regular fa-circle-check"></i>
+              </p>
+            </div>
           </a>
         </div>
         <!-- Fin du menu pour les Entrées -->
         <!-- Début du menu pour les plats -->
         <div class="menu-card">
           <h2 class="card_maintitle">Plats</h2>
+          <hr class="maintitle_border" />
 
           <a class="card" href="#">
-            <p class="card_title">Filet de boeuf aux herbes</p>
-            <p class="card_subtitle">Accompagné de sa ribambelle de légumes</p>
-            <p class="card_price">40€</p>
+            <div class="splitleft">
+              <p class="card_title">Filet de boeuf aux herbes</p>
+              <p class="card_subtitle">
+                Accompagné de sa ribambelle de légumes
+              </p>
+            </div>
+            <div class="splitright">
+              <p class="card_price">40€</p>
+              <p class="card_checkicon">
+                <i class="fa-regular fa-circle-check"></i>
+              </p>
+            </div>
           </a>
 
           <a class="card" href="#">
-            <p class="card_title">Parmentier de queue de boeuf</p>
-            <p class="card_subtitle">
-              À la truffe noire sur sa purée de panais
-            </p>
-            <p class="card_price">35€</p>
+            <div class="splitleft">
+              <p class="card_title">Parmentier de queue de boeuf</p>
+              <p class="card_subtitle">
+                À la truffe noire sur sa purée de panais
+              </p>
+            </div>
+            <div class="splitright">
+              <p class="card_price">35€</p>
+              <p class="card_checkicon">
+                <i class="fa-regular fa-circle-check"></i>
+              </p>
+            </div>
           </a>
 
           <!-- Penser à uniformiser les classes des divs pour le code SCSS -->
 
           <a class="card" href="#">
-            <p class="card_title">Filet de turbot</p>
-            <p class="card_subtitle">Aux agrumes</p>
-            <p class="card_price">44€</p>
+            <div class="splitleft">
+              <p class="card_title">Filet de turbot</p>
+              <p class="card_subtitle">Aux agrumes</p>
+            </div>
+            <div class="splitright">
+              <p class="card_price">44€</p>
+              <p class="card_checkicon">
+                <i class="fa-regular fa-circle-check"></i>
+              </p>
+            </div>
           </a>
         </div>
         <!-- Fin du menu pour les plats -->
         <!-- Début du menu pour les desserts -->
         <div class="menu-card">
           <h2 class="card_maintitle">Desserts</h2>
+          <hr class="maintitle_border" />
 
           <a class="card" href="#">
-            <p class="card_title">Paris-Brest</p>
-            <p class="card_subtitle">Revisité</p>
-            <p class="card_price">18€</p>
+            <div class="splitleft">
+              <p class="card_title">Paris-Brest</p>
+              <p class="card_subtitle">Revisité</p>
+            </div>
+            <div class="splitright">
+              <p class="card_price">18€</p>
+              <p class="card_checkicon">
+                <i class="fa-regular fa-circle-check"></i>
+              </p>
+            </div>
           </a>
 
           <a class="card" href="#">
-            <p class="card_title">Macaron au chocolat d'exception</p>
-            <p class="card_subtitle">Et glace à la vanille de Madagascar</p>
-            <p class="card_price">22€</p>
+            <div class="splitleft">
+              <p class="card_title">Macaron au chocolat d'exception</p>
+              <p class="card_subtitle">Et glace à la vanille de Madagascar</p>
+            </div>
+            <div class="splitright">
+              <p class="card_price">22€</p>
+              <p class="card_checkicon">
+                <i class="fa-regular fa-circle-check"></i>
+              </p>
+            </div>
           </a>
 
           <a class="card" href="#">
-            <p class="card_title">Mousse au chocolat</p>
-            <p class="card_subtitle">
-              Au piment d'espelette et à la truffe noire
-            </p>
-            <p class="card_price">23€</p>
+            <div class="splitleft">
+              <p class="card_title">Mousse au chocolat</p>
+              <p class="card_subtitle">
+                Au piment d'espelette et à la truffe noire
+              </p>
+            </div>
+            <div class="splitright">
+              <p class="card_price">23€</p>
+              <p class="card_checkicon">
+                <i class="fa-regular fa-circle-check"></i>
+              </p>
+            </div>
           </a>
         </div>
       </section>
@@ -154,8 +213,8 @@
       </div>
     </footer>
     <script
-    src="https://kit.fontawesome.com/4fd6ec5615.js"
-    crossorigin="anonymous"
-  ></script>
+      src="https://kit.fontawesome.com/4fd6ec5615.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
