--- a/pages/le_delice_des_sens.html
+++ b/pages/le_delice_des_sens.html
@@ -41,88 +41,143 @@
         <!-- Début du menu pour les Entrées -->
         <div class="menu-card">
           <h2 class="card_maintitle">Entrées</h2>
+          <hr class="maintitle_border" />
           <!-- les divs dans les divs inutiles -->
 
           <a class="card" href="#">
-            <p class="card_title">Tartare de thon</p>
-            <p class="card_subtitle">Assaisonné au yuzu</p>
-            <p class="card_price">25€</p>
-            <p class="card_checkicon">
-              <i class="fa-regular fa-circle-check"></i>
-            </p>
+            <div class="splitleft">
+              <p class="card_title">Tartare de thon</p>
+              <p class="card_subtitle">Assaisonné au yuzu</p>
+            </div>
+            <div class="splitright">
+              <p class="card_price">25€</p>
+              <p class="card_checkicon">
+                <i class="fa-regular fa-circle-check"></i>
+              </p>
+            </div>
           </a>
 
           <!-- Uniformisation des classes selon la méthode BEM -->
           <!-- Suppression de divs inutiles -->
 
           <a class="card" href="#">
-            <p class="card_title">Bouchée de homard croustillant</p>
-            <p class="card_subtitle">Et sa farandole de petits légumes</p>
-            <p class="card_price">35€</p>
-            <p class="card_checkicon">
-              <i class="fa-regular fa-circle-check"></i>
-            </p>
+            <div class="splitleft">
+              <p class="card_title">Bouchée de homard croustillant</p>
+              <p class="card_subtitle">Et sa farandole de petits légumes</p>
+            </div>
+            <div class="splitright">
+              <p class="card_price">35€</p>
+              <p class="card_checkicon">
+                <i class="fa-regular fa-circle-check"></i>
+              </p>
+            </div>
           </a>
 
           <!-- attention -->
 
           <a class="card" href="#">
-            <p class="card_title">Velouté de cèpes</p>
-            <p class="card_subtitle">Aux truffes</p>
-            <p class="card_price">20€</p>
-            <p class="card_checkicon">
-              <i class="fa-regular fa-circle-check"></i>
-            </p>
+            <div class="splitleft">
+              <p class="card_title">Velouté de cèpes</p>
+              <p class="card_subtitle">Aux truffes</p>
+            </div>
+            <div class="splitright">
+              <p class="card_price">20€</p>
+              <p class="card_checkicon">
+                <i class="fa-regular fa-circle-check"></i>
+              </p>
+            </div>
           </a>
         </div>
         <!-- Fin du menu pour les Entrées -->
         <!-- Début du menu pour les plats -->
         <div class="menu-card">
           <h2 class="card_maintitle">Plats</h2>
+          <hr class="maintitle_border" />
 
           <a class="card" href="#">
-            <p class="card_title">Poulet rôti aux herbes de provence</p>
-            <p class="card_subtitle">Et sa crème de truffe</p>
-            <p class="card_price">40€</p>
+            <div class="splitleft">
+              <p class="card_title">Poulet rôti aux herbes de provence</p>
+              <p class="card_subtitle">Et sa crème de truffe</p>
+            </div>
+            <div class="splitright">
+              <p class="card_price">40€</p>
+              <p class="card_checkicon">
+                <i class="fa-regular fa-circle-check"></i>
+              </p>
+            </div>
           </a>
 
           <a class="card" href="#">
-            <p class="card_title">Langouste rôtie</p>
-            <p class="card_subtitle">Et ses légumes de saison</p>
-            <p class="card_price">35€</p>
+            <div class="splitleft">
+              <p class="card_title">Langouste rôtie</p>
+              <p class="card_subtitle">Et ses légumes de saison</p>
+            </div>
+            <div class="splitright">
+              <p class="card_price">35€</p>
+              <p class="card_checkicon">
+                <i class="fa-regular fa-circle-check"></i>
+              </p>
+            </div>
           </a>
 
           <!-- Penser à uniformiser les classes des divs pour le code SCSS -->
 
           <a class="card" href="#">
-            <p class="card_title">Côte de boeuf angus</p>
-            <p class="card_subtitle">Et sa purée de panais</p>
-            <p class="card_price">44€</p>
+            <div class="splitleft">
+              <p class="card_title">Côte de boeuf angus</p>
+              <p class="card_subtitle">Et sa purée de panais</p>
+            </div>
+            <div class="splitright">
+              <p class="card_price">44€</p>
+              <p class="card_checkicon">
+                <i class="fa-regular fa-circle-check"></i>
+              </p>
+            </div>
           </a>
         </div>
         <!-- Fin du menu pour les plats -->
         <!-- Début du menu pour les desserts -->
         <div class="menu-card">
           <h2 class="card_maintitle">Desserts</h2>
+          <hr class="maintitle_border" />
 
           <a class="card" href="#">
-            <p class="card_title">Farandole de desserts</p>
-            <p class="card_subtitle">
-              Du chef
-            </p>
-            <p class="card_price">18€</p>
+            <div class="splitleft">
+              <p class="card_title">Farandole de desserts</p>
+              <p class="card_subtitle">Du chef</p>
+            </div>
+            <div class="splitright">
+              <p class="card_price">18€</p>
+              <p class="card_checkicon">
+                <i class="fa-regular fa-circle-check"></i>
+              </p>
+            </div>
           </a>
 
           <a class="card" href="#">
-            <p class="card_title">Crème brulée</p>
-            <p class="card_subtitle">Revisitée</p>
-            <p class="card_price">22€</p>
+            <div class="splitleft">
+              <p class="card_title">Crème brulée</p>
+              <p class="card_subtitle">Revisitée</p>
+            </div>
+            <div class="splitright">
+              <p class="card_price">22€</p>
+              <p class="card_checkicon">
+                <i class="fa-regular fa-circle-check"></i>
+              </p>
+            </div>
           </a>
 
           <a class="card" href="#">
-            <p class="card_title">Tiramisu</p>
-            <p class="card_subtitle">Á la noisette</p>
-            <p class="card_price">23€</p>
+            <div class="splitleft">
+              <p class="card_title">Tiramisu</p>
+              <p class="card_subtitle">Á la noisette</p>
+            </div>
+            <div class="splitright">
+              <p class="card_price">23€</p>
+              <p class="card_checkicon">
+                <i class="fa-regular fa-circle-check"></i>
+              </p>
+            </div>
           </a>
         </div>
       </section>
@@ -152,8 +207,8 @@
       </div>
     </footer>
     <script
-    src="https://kit.fontawesome.com/4fd6ec5615.js"
-    crossorigin="anonymous"
-  ></script>
+      src="https://kit.fontawesome.com/4fd6ec5615.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
