--- a/pages/la_note_enchantee.html
+++ b/pages/la_note_enchantee.html
@@ -41,96 +41,158 @@
         <!-- Début du menu pour les Entrées -->
         <div class="menu-card">
           <h2 class="card_maintitle">Entrées</h2>
+          <hr class="maintitle_border" />
           <!-- les divs dans les divs inutiles -->
 
           <a class="card" href="#">
-            <p class="card_title">Ravioles de foie gras</p>
-            <p class="card_subtitle">Accompagnés de leur crème à la truffe</p>
-            <p class="card_price">25€</p>
-            <p class="card_checkicon">
-              <i class="fa-regular fa-circle-check"></i>
-            </p>
+            <div class="splitleft">
+              <p class="card_title">Ravioles de foie gras</p>
+              <p class="card_subtitle">Accompagnés de leur crème à la truffe</p>
+            </div>
+            <div class="splitright">
+              <p class="card_price">25€</p>
+              <p class="card_checkicon">
+                <i class="fa-regular fa-circle-check"></i>
+              </p>
+            </div>
           </a>
 
           <!-- Uniformisation des classes selon la méthode BEM -->
           <!-- Suppression de divs inutiles -->
 
           <a class="card" href="#">
-            <p class="card_title">Caviar osciètre</p>
-            <p class="card_subtitle">Sur blini à la farine de blé noir</p>
-            <p class="card_price">35€</p>
-            <p class="card_checkicon">
-              <i class="fa-regular fa-circle-check"></i>
-            </p>
+            <div class="splitleft">
+              <p class="card_title">Caviar osciètre</p>
+              <p class="card_subtitle">Sur blini à la farine de blé noir</p>
+            </div>
+            <div class="splitright">
+              <p class="card_price">35€</p>
+              <p class="card_checkicon">
+                <i class="fa-regular fa-circle-check"></i>
+              </p>
+            </div>
           </a>
 
           <!-- attention -->
 
           <a class="card" href="#">
-            <p class="card_title">Homard et espuma de potiron</p>
-            <p class="card_subtitle">Mariné aux zestes d'orange</p>
-            <p class="card_price">20€</p>
-            <p class="card_checkicon">
-              <i class="fa-regular fa-circle-check"></i>
-            </p>
+            <div class="splitleft">
+              <p class="card_title">Homard et espuma de potiron</p>
+              <p class="card_subtitle">Mariné aux zestes d'orange</p>
+            </div>
+            <div class="splitright">
+              <p class="card_price">20€</p>
+              <p class="card_checkicon">
+                <i class="fa-regular fa-circle-check"></i>
+              </p>
+            </div>
           </a>
 
-
           <a class="card" href="#">
-            <p class="card_title">Foie gras de canard cuit entier</p>
-            <p class="card_subtitle">confiture de figue et pain toasté</p>
-            <p class="card_price">35€</p>
-            <p class="card_checkicon">
-              <i class="fa-regular fa-circle-check"></i>
-            </p>
+            <div class="splitleft">
+              <p class="card_title">Foie gras de canard cuit entier</p>
+              <p class="card_subtitle">confiture de figue et pain toasté</p>
+            </div>
+            <div class="splitright">
+              <p class="card_price">35€</p>
+              <p class="card_checkicon">
+                <i class="fa-regular fa-circle-check"></i>
+              </p>
+            </div>
           </a>
         </div>
         <!-- Fin du menu pour les Entrées -->
         <!-- Début du menu pour les plats -->
         <div class="menu-card">
           <h2 class="card_maintitle">Plats</h2>
+          <hr class="maintitle_border" />
 
           <a class="card" href="#">
-            <p class="card_title">Noix decoquilles Saint-Jacques</p>
-            <p class="card_subtitle">Sur lit de purée de céleri-rave</p>
-            <p class="card_price">40€</p>
+            <div class="splitleft">
+              <p class="card_title">Noix decoquilles Saint-Jacques</p>
+              <p class="card_subtitle">Sur lit de purée de céleri-rave</p>
+            </div>
+            <div class="splitright">
+              <p class="card_price">40€</p>
+              <p class="card_checkicon">
+                <i class="fa-regular fa-circle-check"></i>
+              </p>
+            </div>
           </a>
 
           <a class="card" href="#">
-            <p class="card_title">Langoustine poêlée</p>
-            <p class="card_subtitle">Purée de patate douce</p>
-            <p class="card_price">35€</p>
+            <div class="splitleft">
+              <p class="card_title">Langoustine poêlée</p>
+              <p class="card_subtitle">Purée de patate douce</p>
+            </div>
+            <div class="splitright">
+              <p class="card_price">35€</p>
+              <p class="card_checkicon">
+                <i class="fa-regular fa-circle-check"></i>
+              </p>
+            </div>
           </a>
 
           <!-- Penser à uniformiser les classes des divs pour le code SCSS -->
 
           <a class="card" href="#">
-            <p class="card_title">Mijoté de queue de boeuf</p>
-            <p class="card_subtitle">Et riz sauvage aux zests de citron</p>
-            <p class="card_price">44€</p>
+            <div class="splitleft">
+              <p class="card_title">Mijoté de queue de boeuf</p>
+              <p class="card_subtitle">Et riz sauvage aux zests de citron</p>
+            </div>
+            <div class="splitright">
+              <p class="card_price">44€</p>
+              <p class="card_checkicon">
+                <i class="fa-regular fa-circle-check"></i>
+              </p>
+            </div>
           </a>
         </div>
         <!-- Fin du menu pour les plats -->
         <!-- Début du menu pour les desserts -->
         <div class="menu-card">
           <h2 class="card_maintitle">Desserts</h2>
+          <hr class="maintitle_border" />
 
           <a class="card" href="#">
-            <p class="card_title">macaron noisette et chocolat</p>
-            <p class="card_subtitle">Glace au caramel brun et sel de Guérande</p>
-            <p class="card_price">18€</p>
+            <div class="splitleft">
+              <p class="card_title">macaron noisette et chocolat</p>
+              <p class="card_subtitle">
+                Glace au caramel brun et sel de Guérande
+              </p>
+            </div>
+            <div class="splitright">
+              <p class="card_price">18€</p>
+              <p class="card_checkicon">
+                <i class="fa-regular fa-circle-check"></i>
+              </p>
+            </div>
           </a>
 
           <a class="card" href="#">
-            <p class="card_title">Baba au rhum revisité</p>
-            <p class="card_subtitle">Avec son coulis de citron</p>
-            <p class="card_price">22€</p>
+            <div class="splitleft">
+              <p class="card_title">Baba au rhum revisité</p>
+              <p class="card_subtitle">Avec son coulis de citron</p>
+            </div>
+            <div class="splitright">
+              <p class="card_price">22€</p>
+              <p class="card_checkicon">
+                <i class="fa-regular fa-circle-check"></i>
+              </p>
+            </div>
           </a>
 
           <a class="card" href="#">
-            <p class="card_title">Tarte au citron meringuée</p>
-            <p class="card_subtitle">Destructurée</p>
-            <p class="card_price">23€</p>
+            <div class="splitleft">
+              <p class="card_title">Tarte au citron meringuée</p>
+              <p class="card_subtitle">Destructurée</p>
+            </div>
+            <div class="splitright">
+              <p class="card_price">23€</p>
+              <p class="card_checkicon">
+                <i class="fa-regular fa-circle-check"></i>
+              </p>
+            </div>
           </a>
         </div>
       </section>
@@ -160,8 +222,8 @@
       </div>
     </footer>
     <script
-    src="https://kit.fontawesome.com/4fd6ec5615.js"
-    crossorigin="anonymous"
-  ></script>
+      src="https://kit.fontawesome.com/4fd6ec5615.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
