Début de la configuration de la'animation du coeur pour la page index

--- a/index.html
+++ b/index.html
@@ -93,6 +93,9 @@
               <p class="description__hearticon">
                 <i class="fa-regular fa-heart"></i>
               </p>
+              <p class="description__hearticonfill">
+                <i class="fa-solid fa-heart"></i>
+              </p>
             </div>
           </a>
         </div>
