Correction des couleurs pour l'animation des coeurs et création d'un loader spinner

--- a/index.html
+++ b/index.html
@@ -33,6 +33,13 @@
       <!-- Création de différentes branches pour séparer le code en plusieurs sections -->
       <!-- Méthodologie BEM non respectée. Il est important de nommer les blocs, éléments et modificateurs selon leurs rôles -->
 
+      <!-- Début du loader -->
+      <!-- Merci Google pour les exemples de loader bien sympathiques! -->
+
+      <div class="loader"></div>
+
+      <!-- Fin du loader -->
+
       <!-- Début de la section 1 -->
       <section class="section1">
         <h1 class="section1__maintitle">Réservez le menu qui vous convient</h1>
@@ -113,6 +120,7 @@
               <h4 class="description__subtitle">Charonne</h4>
               <p class="description__hearticon">
                 <i class="fa-regular fa-heart"></i>
+                <i class="fa-solid fa-heart"></i>
               </p>
             </div>
           </a>
@@ -131,6 +139,7 @@
               <h4 class="description__subtitle">Cité Rouge</h4>
               <p class="description__hearticon">
                 <i class="fa-regular fa-heart"></i>
+                <i class="fa-solid fa-heart"></i>
               </p>
             </div>
           </a>
@@ -149,6 +158,7 @@
               <h4 class="description__subtitle">Folie-Méricourt</h4>
               <p class="description__hearticon">
                 <i class="fa-regular fa-heart"></i>
+                <i class="fa-solid fa-heart"></i>
               </p>
             </div>
           </a>
