Correction des animations et du loader par mon mentor

--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
     <!-- Début du loader -->
     <!-- Merci Google pour les exemples de loader bien sympathiques! -->
 
-    <div class="loader"></div>
+
+    <div id="loader-container">
+      <div class="loader"></div>
+    </div>
+
 
     <!-- Fin du loader -->
 
