Configuration de l'animation de l'icône de validation des pages restaurant

--- a/pages/a_la_francaise.html
+++ b/pages/a_la_francaise.html
@@ -48,12 +48,12 @@
             <div class="splitleft">
               <p class="card_title">Tartare de poulpe acidulé</p>
               <p class="card_subtitle">Aux zests d'orange</p>
-              <p class="card_price">25€</p>
             </div>
             <div class="splitright">
-              <p class="card_checkicon">
+              <em class="card_price">25€</em>
+              <span class="card_checkicon">
                 <i class="fa-regular fa-circle-check"></i>
-              </p>
+              </span>
             </div>
           </a>
 
@@ -64,12 +64,12 @@
             <div class="splitleft">
               <p class="card_title">Velouté de légumes d'antan</p>
               <p class="card_subtitle">Carotte, panais, topinambour</p>
-              <p class="card_price">35€</p>
             </div>
             <div class="splitright">
-              <p class="card_checkicon">
+              <em class="card_price">35€</em>
+              <span class="card_checkicon">
                 <i class="fa-regular fa-circle-check"></i>
-              </p>
+              </span>
             </div>
           </a>
 
@@ -79,12 +79,12 @@
             <div class="splitleft">
               <p class="card_title">Soupe à l'oignon</p>
               <p class="card_subtitle">Revisitée</p>
-              <p class="card_price">20€</p>
             </div>
             <div class="splitright">
-              <p class="card_checkicon">
+              <em class="card_price">20€</em>
+              <span class="card_checkicon">
                 <i class="fa-regular fa-circle-check"></i>
-              </p>
+              </span>
             </div>
           </a>
         </div>
@@ -97,12 +97,12 @@
             <div class="splitleft">
               <p class="card_title">Coquilles Saint-Jacques</p>
               <p class="card_subtitle">Accompagnées d'une purée de panais</p>
-              <p class="card_price">40€</p>
             </div>
             <div class="splitright">
-              <p class="card_checkicon">
-                <i class="fa-regular fa-circle-check"></i>
-              </p>
+              <em class="card_price">40€</em>
+              <span class="card_checkicon">
+                <span class="fa-regular fa-circle-check"></span>
+              </span>
             </div>
           </a>
 
@@ -110,12 +110,12 @@
             <div class="splitleft">
               <p class="card_title">Magret de canard</p>
               <p class="card_subtitle">Et parmentier de pommes de terres</p>
-              <p class="card_price">35€</p>
             </div>
             <div class="splitright">
-              <p class="card_checkicon">
+              <em class="card_price">35€</em>
+              <span class="card_checkicon">
                 <i class="fa-regular fa-circle-check"></i>
-              </p>
+              </span>
             </div>
           </a>
 
@@ -125,12 +125,12 @@
             <div class="splitleft">
               <p class="card_title">Pigeonneau d'Ille-et-Vilaine</p>
               <p class="card_subtitle">Sur son lit de gnocchis aux légumes</p>
-              <p class="card_price">44€</p>
             </div>
             <div class="splitright">
-              <p class="card_checkicon">
+              <em class="card_price">44€</em>
+              <span class="card_checkicon">
                 <i class="fa-regular fa-circle-check"></i>
-              </p>
+              </span>
             </div>
           </a>
         </div>
@@ -143,12 +143,12 @@
             <div class="splitleft">
               <p class="card_title">Pétales de violettes glacés</p>
               <p class="card_subtitle">Et purée de noisettes</p>
-              <p class="card_price">18€</p>
             </div>
             <div class="splitright">
-              <p class="card_checkicon">
+              <em class="card_price">18€</em>
+              <span class="card_checkicon">
                 <i class="fa-regular fa-circle-check"></i>
-              </p>
+              </span>
             </div>
           </a>
 
@@ -156,12 +156,12 @@
             <div class="splitleft">
               <p class="card_title">Fondant au chocolat</p>
               <p class="card_subtitle">Revisité</p>
-              <p class="card_price">22€</p>
             </div>
             <div class="splitright">
-              <p class="card_checkicon">
+              <em class="card_price">22€</em>
+              <span class="card_checkicon">
                 <i class="fa-regular fa-circle-check"></i>
-              </p>
+              </span>
             </div>
           </a>
 
@@ -169,12 +169,12 @@
             <div class="splitleft">
               <p class="card_title">Millefeuille croustillant</p>
               <p class="card_subtitle">Myrtilles et pâte d'amande</p>
-              <p class="card_price">23€</p>
             </div>
             <div class="splitright">
-              <p class="card_checkicon">
+              <em class="card_price">23€</em>
+              <span class="card_checkicon">
                 <i class="fa-regular fa-circle-check"></i>
-              </p>
+              </span>
             </div>
           </a>
         </div>
