Suite de la configuration de l'animation de l'icône de validation. Affichage de l'icône de retour à l'index. Affichage du loader et animation de l'icône de coeur  sur la page restaurant à la française.

--- a/pages/a_la_francaise.html
+++ b/pages/a_la_francaise.html
@@ -26,6 +26,15 @@
       </nav>
     </header>
     <main id="page-restau">
+      <!-- Début du loader -->
+      <!-- Merci Google pour les exemples de loader bien sympathiques! -->
+
+      <div id="loader-container">
+        <div class="loader"></div>
+      </div>
+
+      <!-- Fin du loader -->
+
       <!-- Simple image ou background? -->
       <img
         src="../assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
@@ -36,7 +45,10 @@
         <div class="menu_maintitle">
           <!-- attention aux balises titres, le h1 est unique -->
           <h1 class="maintitle_title">Á la française</h1>
-          <p class="maintitle_icon"><i class="fa-regular fa-heart"></i></p>
+          <p class="maintitle_icon">
+            <i class="fa-regular fa-heart"></i>
+            <i class="fa-solid fa-heart"></i>
+          </p>
         </div>
         <!-- Début du menu pour les Entrées -->
         <div class="menu-card">
