Correction et ajustement du footer. Rajout d'une div sur les pages HTML. Animation du loader gênante sur le bouton de la section 1. Tentative de cacher l'animation après le chargement de la page

--- a/index.html
+++ b/index.html
@@ -172,11 +172,13 @@
       <!-- Fin de la section 3 -->
     </main>
     <footer class="index-foot">
+      <div class="logocontainer">
       <img
         class="index-foot__logo"
         src="assets/images/logo/ohmyfood.png"
         alt="Logo Ohmyfood"
       />
+    </div>
       <div class="index-foot__link">
         <p class="link__icon"><i class="fa-solid fa-utensils"></i></p>
         <a href="#" class="link__text">Proposer un restaurant</a>
