--- a/pages/la_note_enchantee.html
+++ b/pages/la_note_enchantee.html
@@ -201,11 +201,13 @@
       </section>
     </main>
     <footer class="index-foot">
-      <img
-        class="index-foot__logo"
-        src="../assets/images/logo/ohmyfood.png"
-        alt="Logo Ohmyfood"
-      />
+      <div class="logocontainer">
+        <img
+          class="index-foot__logo"
+          src="../assets/images/logo/ohmyfood.png"
+          alt="Logo Ohmyfood"
+        />
+      </div>
       <div class="index-foot__link">
         <p class="link__icon"><i class="fa-solid fa-utensils"></i></p>
         <a href="#" class="link__text">Proposer un restaurant</a>
