Ajout de l'icône de coeur sur les pages html des restaurants. Ajustement de la taille des photos du menu

--- a/pages/le_delice_des_sens.html
+++ b/pages/le_delice_des_sens.html
@@ -25,7 +25,7 @@
         />
       </nav>
     </header>
-    <main>
+    <main id="page-restau">
       <!-- Simple image ou background? -->
       <img
         src="../assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
@@ -36,7 +36,10 @@
         <div class="menu_maintitle">
           <!-- attention aux balises titres, le h1 est unique -->
           <h1 class="maintitle_title">Le délice des sens</h1>
-          <p class="maintitle_icon"><i class="fa-regular fa-heart"></i></p>
+          <p class="maintitle_icon">
+            <i class="fa-regular fa-heart"></i>
+            <i class="fa-solid fa-heart"></i>
+          </p>
         </div>
         <!-- Début du menu pour les Entrées -->
         <div class="menu-card">
