--- a/pages/la_note_enchantee.html
+++ b/pages/la_note_enchantee.html
@@ -25,7 +25,7 @@
         />
       </nav>
     </header>
-    <main>
+    <main id="page-restau">
       <!-- Simple image ou background? -->
       <img
         src="../assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
@@ -36,7 +36,10 @@
         <div class="menu_maintitle">
           <!-- attention aux balises titres, le h1 est unique -->
           <h1 class="maintitle_title">La note enchantée</h1>
-          <p class="maintitle_icon"><i class="fa-regular fa-heart"></i></p>
+          <p class="maintitle_icon">
+            <i class="fa-regular fa-heart"></i>
+            <i class="fa-solid fa-heart"></i>
+          </p>
         </div>
         <!-- Début du menu pour les Entrées -->
         <div class="menu-card">
@@ -156,7 +159,7 @@
 
           <a class="card" href="#">
             <div class="splitleft">
-              <p class="card_title">macaron noisette et chocolat</p>
+              <p class="card_title">Macaron noisette et chocolat</p>
               <p class="card_subtitle">
                 Glace au caramel brun et sel de Guérande
               </p>
